ocp4-workloads-mario/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: infinite-mario
  labels:
    app: infinite-mario
    app.kubernetes.io/part-of: infinite-mario
    app.kubernetes.io/component: infinite-mario
    app.kubernetes.io/instance: infinite-mario
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
  replicas: 1
  selector:
    app: infinite-mario
    deploymentconfig: infinite-mario
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: infinite-mario
        deploymentconfig: infinite-mario
    spec:
      containers:
        - name: infinite-mario
          image: "quay.io/kmoini/infinite_mario"
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
