ocp4-workloads-mario/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: infinite-mario
  namespace: infinite-mario
spec:
  to:
    kind: Service
    name: infinite-mario
    weight: 100
  port:
    targetPort: "8080-tcp"
  tls:
    termination: edge
  wildcardPolicy: None
